# mesh-inspector

./: .editorconfig  .gitignore  .licenserc.json  CMakeLists.txt  CMakePresets.json  README.md  aboutdlg.cpp  aboutdlg.h  blockobject.cpp  blockobject.h  exodusiireader.cpp  exodusiireader.h  infowindow.cpp  infowindow.h  main.cpp  mainwindow.cpp  mainwindow.h  meshinspectorconfig.h.in  meshobject.h  nodesetobject.cpp  reader.cpp  reader.h  sidesetobject.cpp
.github/workflows/: build.yml  codeql-analysis.yml  qa.yml  release.yml
cmake/: MacOSXIcons.cmake
common/: CMakeLists.txt  clickablelabel.cpp  clickablelabel.h  colorpicker.cpp  colorpicker.h  doubleslider.cpp  doubleslider.h  expandablewidget.cpp  expandablewidget.h  hline.cpp  hline.h  horzline.cpp  horzline.h  infowidget.cpp  infowidget.h  loadfileevent.cpp  loadfileevent.h  notificationwidget.cpp  notificationwidget.h  otreeview.cpp  otreeview.h  reader.cpp  reader.h  sliderwithedit.cpp  sliderwithedit.h
contrib/flex/: FlexLexer.h
contrib/fmt/: CMakeLists.txt
contrib/gmshparsercpp/: CMakeLists.txt
contrib/gmshparsercpp/include/: gmshparsercpp.h
contrib/gmshparsercpp/include/gmshparsercpp/: Enums.h  Exception.h  MshFile.h  MshLexer.h
contrib/gmshparsercpp/src/: CMakeLists.txt  Exception.cpp  MshFile.cpp  MshLexer.cpp  msh.lex
fe/: CMakeLists.txt  common.h  determinant.h  element.cpp  element.h  enums.h  function.h  function1d.h  function2d.h  function3d.h  lobatto.h  quadrature1d.cpp  quadrature1d.h  quadrature2d.cpp  quadrature2d.h  quadrature3d.cpp  quadrature3d.h  refdomain.cpp  refdomain.h  refmap1d.cpp  refmap1d.h  refmap2d.cpp  refmap2d.h  refmap3d.cpp  refmap3d.h  refmapss.cpp  refmapss.h  shapefunction1d.cpp  shapefunction1d.h  shapefunction2d.cpp  shapefunction2d.h  shapefunction3d.cpp  shapefunction3d.h  shapeset.h  shapeset1d.cpp  shapeset1d.h  shapeset2d.cpp  shapeset2d.h  shapeset3d.cpp  shapeset3d.h  (+1 more)
resources/: mesh-inspector.desktop
src/: CMakeLists.txt  aboutdlg.cpp  aboutdlg.h  blockobject.cpp  blockobject.h  boundingbox.cpp  boundingbox.h  checkforupdatetool.cpp  checkforupdatetool.h  cliptool.cpp  cliptool.h  clipwidget.cpp  clipwidget.h  colorprofile.cpp  colorprofile.h  exodusiireader.cpp  exodusiireader.h  explodetool.cpp  explodetool.h  explodewidget.cpp  explodewidget.h  exporttool.cpp  exporttool.h  filechangednotificationwidget.cpp  filechangednotificationwidget.h  infoview.cpp  infoview.h  infowindow.cpp  infowindow.h  licensedlg.cpp  licensedlg.h  main.cpp  mainwindow.cpp  mainwindow.h  meshinspectorconfig.h.in  meshmodel.cpp  meshmodel.h  meshobject.cpp  meshobject.h  meshqualitytool.cpp  (+36 more)
tests/: CMakeLists.txt  ColorProfile_test.cpp
